--- a/TML/TML_Eval.ipynb
+++ b/TML/TML_Eval.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Traditional Machine Learning model"
+    "# Traditional Machine Learning model (TML)"
    ]
   },
   {
@@ -85,7 +85,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Should the model check if any of the input molecules is already present in the dataset?\n",
+    "*Should the model check if any of the input molecules is already present in the dataset?*\n",
+    "<br>\n",
     "<br>\n",
     "If True, for any known pair the results will show the ground truth (0 or 1) and not model's prediction."
    ]
@@ -155,8 +156,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "TAS2RPred",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
