--- a/TML/TML_Eval.ipynb
+++ b/TML/TML_Eval.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Traditional Machine Learning model (TML)"
+    "# Traditional Machine Learning model"
    ]
   },
   {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "from TML_Eval import eval_smiles"
+    "from TML_Eval_v2 import eval_smiles"
    ]
   },
   {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,15 +85,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Should the model check if any of the input molecules is already present in the dataset?*\n",
-    "<br>\n",
+    "Should the model check if any of the input molecules is already present in the dataset?\n",
     "<br>\n",
     "If True, for any known pair the results will show the ground truth (0 or 1) and not model's prediction."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,11 +108,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO  ] Standardizing molecules\n",
+      "[INFO  ] Checking Applicability Domain\n",
+      "[INFO  ] Calculating descriptors\n",
+      "[INFO  ] Adding Receptor features\n",
+      "[INFO  ] Making predictions\n",
+      "[INFO  ] Wrapping up results\n"
+     ]
+    }
+   ],
    "source": [
-    "f_df = eval_smiles(smiles,ground_truth=GT)"
+    "f_df = eval_smiles(smiles,ground_truth=GT, verbose=True)"
    ]
   },
   {
@@ -146,9 +158,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Standardized SMILES</th>\n",
+       "      <th>Ground Truth</th>\n",
+       "      <th>Check AD</th>\n",
+       "      <th>1</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>13</th>\n",
+       "      <th>14</th>\n",
+       "      <th>16</th>\n",
+       "      <th>38</th>\n",
+       "      <th>39</th>\n",
+       "      <th>40</th>\n",
+       "      <th>41</th>\n",
+       "      <th>42</th>\n",
+       "      <th>43</th>\n",
+       "      <th>44</th>\n",
+       "      <th>46</th>\n",
+       "      <th>47</th>\n",
+       "      <th>49</th>\n",
+       "      <th>50</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CNC(C)Cc1ccc2c(c1)OCO2</td>\n",
+       "      <td>Absent</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Standardized SMILES Ground Truth Check AD     1    3     4    5     7  \\\n",
+       "0  CNC(C)Cc1ccc2c(c1)OCO2       Absent      1.0  0.09  0.0  0.05  0.0  0.01   \n",
+       "\n",
+       "     8    9    10   13    14    16    38    39    40   41   42    43   44  \\\n",
+       "0  0.0  0.0  0.61  0.0  0.84  0.01  0.07  0.07  0.01  0.0  0.0  0.02  0.0   \n",
+       "\n",
+       "    46    47    49   50  \n",
+       "0  0.5  0.01  0.01  0.0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "with pd.option_context('display.max_rows', None, 'display.max_columns', None):\n",
     "    display(f_df)"
@@ -162,7 +270,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.19"
   }
  },
