fixing issues with the pyenchant library with MacOS

--- a/TML/TML_Eval.ipynb
+++ b/TML/TML_Eval.ipynb
@@ -53,15 +53,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import ast\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: PYENCHANT_LIBRARY_PATH=/opt/homebrew/opt/enchant/lib/libenchant-2.dylib\n"
+     ]
+    }
+   ],
+   "source": [
+    "# if you are encountering an error with enchant, uncomment the following line\n",
+    "# customise the path to your enchant library (/opt/homebrew/opt/enchant/lib/libenchant-2.dylib)\n",
+    "# to find the location of the enchant library on MacOS, run `brew --prefix enchant`\n",
+    "%env PYENCHANT_LIBRARY_PATH=/opt/homebrew/opt/enchant/lib/libenchant-2.dylib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[09:06:21] Initializing Normalizer\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import the evaluation function for the TML model\n",
     "from TML_Eval_v2 import eval_smiles"
    ]
   },
@@ -74,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
