--- a/old/GCN_Eval.ipynb
+++ b/old/GCN_Eval.ipynb
@@ -53,29 +53,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[12:26:18] Initializing Normalizer\n"
-     ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'torch'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mrdkit\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Chem\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mchembl_structure_pipeline\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m standardizer\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorch_geometric\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mloader\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DataLoader\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mGCN_Eval\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MolDataset_exp, BitterGCN, ugrad_cam\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'torch'"
+      "env: PYENCHANT_LIBRARY_PATH=/opt/homebrew/opt/enchant/lib/libenchant-2.dylib\n"
      ]
     }
    ],
    "source": [
+    "# if you are encountering an error with enchant, uncomment the following line\n",
+    "# customise the path to your enchant library (/opt/homebrew/opt/enchant/lib/libenchant-2.dylib)\n",
+    "# to find the location of the enchant library on MacOS, run `brew --prefix enchant`\n",
+    "%env PYENCHANT_LIBRARY_PATH=/opt/homebrew/opt/enchant/lib/libenchant-2.dylib\n",
+    "\n",
     "import os, shutil\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -103,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
