adjust path to import the relative function to evaluate the smiles

--- a/notebook/TML_Eval.ipynb
+++ b/notebook/TML_Eval.ipynb
@@ -53,14 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import ast\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import sys"
    ]
   },
   {
@@ -85,19 +86,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[09:06:21] Initializing Normalizer\n"
+      "[17:14:43] Initializing Normalizer\n"
      ]
     }
    ],
    "source": [
-    "# import the evaluation function for the TML model\n",
+    "# import the evaluation function for the TML model (folder in ../TML)\n",
+    "import os\n",
+    "sys.path.append(os.path.join(os.path.dirname(os.getcwd()), 'TML/'))\n",
+    "\n",
+    "import TML_Eval_v2\n",
     "from TML_Eval_v2 import eval_smiles"
    ]
   },
@@ -110,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
