--- a/notebooks/GCN_Eval.ipynb
+++ b/notebooks/GCN_Eval.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -61,6 +61,13 @@
      "output_type": "stream",
      "text": [
       "env: PYENCHANT_LIBRARY_PATH=/opt/homebrew/opt/enchant/lib/libenchant-2.dylib\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[17:47:42] Initializing Normalizer\n"
      ]
     }
    ],
@@ -77,15 +84,29 @@
     "from chembl_structure_pipeline import standardizer\n",
     "import torch\n",
     "from torch_geometric.loader import DataLoader\n",
-    "from GCN_Eval_v2 import eval_smiles_gcn\n",
-    "from Virtuous import TestAD\n",
     "from rdkit import Chem\n",
     "from rdkit.Chem import Draw\n",
     "from rdkit.Chem import rdDepictor\n",
     "from rdkit.Chem.Draw import rdMolDraw2D\n",
     "from rdkit.Chem.rdmolops import RemoveAllHs\n",
     "from rdkit_heatmaps import mapvalues2mol\n",
-    "from rdkit_heatmaps.utils import transform2png"
+    "from rdkit_heatmaps.utils import transform2png\n",
+    "from ipywidgets import interact, interactive, fixed, interact_manual"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import the evaluation function for the TML model (folder in ../TML)\n",
+    "import os\n",
+    "import sys\n",
+    "sys.path.append(os.path.join(os.path.dirname(os.getcwd()), 'GCN/'))\n",
+    "\n",
+    "import GCN_Eval_v2\n",
+    "from GCN_Eval_v2 import eval_smiles_gcn"
    ]
   },
   {
@@ -108,7 +129,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Set TRUE to plot and save a UGrad-CAM plot for every pair. If FALSE, it will only generate UGrad-CAM plots if there is only <b>ONE</b> input molecule"
+    "Set TRUE to plot and save a UGrad-CAM plot for every pair. \n",
+    "\n",
+    "Plot the gradient activation with UGrad-CAM, where Red is associated with activation of the node toward class 1, and Blue toward class 0"
    ]
   },
   {
@@ -127,7 +150,7 @@
    "outputs": [],
    "source": [
     "# Activates plotting of explanations with UGrad-CAM\n",
-    "PLOT_UGRADCAM = False"
+    "PLOT_UGRADCAM = True"
    ]
   },
   {
@@ -158,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -167,6 +190,35 @@
      "text": [
       "Processing...\n",
       "Done!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO   ] Plotting UGrad-CAMs for molecule #1\n",
+      "[INFO   ]   - TAS2R1\n",
+      "[INFO   ]   - TAS2R3\n",
+      "[INFO   ]   - TAS2R4\n",
+      "[INFO   ]   - TAS2R5\n",
+      "[INFO   ]   - TAS2R7\n",
+      "[INFO   ]   - TAS2R8\n",
+      "[INFO   ]   - TAS2R9\n",
+      "[INFO   ]   - TAS2R10\n",
+      "[INFO   ]   - TAS2R13\n",
+      "[INFO   ]   - TAS2R14\n",
+      "[INFO   ]   - TAS2R16\n",
+      "[INFO   ]   - TAS2R38\n",
+      "[INFO   ]   - TAS2R39\n",
+      "[INFO   ]   - TAS2R40\n",
+      "[INFO   ]   - TAS2R41\n",
+      "[INFO   ]   - TAS2R42\n",
+      "[INFO   ]   - TAS2R43\n",
+      "[INFO   ]   - TAS2R44\n",
+      "[INFO   ]   - TAS2R46\n",
+      "[INFO   ]   - TAS2R47\n",
+      "[INFO   ]   - TAS2R49\n",
+      "[INFO   ]   - TAS2R50\n"
      ]
     }
    ],
@@ -178,35 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## UGrad-CAM"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Plot the gradient activation with UGrad-CAM, where Red is associated with activation of the node toward class 1, and Blue toward class 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Show the table with the <b> final results </b>"
    ]
   },
   {
@@ -225,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -327,6 +351,103 @@
    "source": [
     "with pd.option_context('display.max_rows', None, 'display.max_columns', None):\n",
     "    display(final_results_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Display the explanations using the UGrad-CAM method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot the UGradCAM explanation for the selected receptor\n",
+    "def plot_UGradCAM(receptor): \n",
+    "\n",
+    "    from IPython.display import Image, display\n",
+    "\n",
+    "    # check if the UGradCAM results are available\n",
+    "    if PLOT_UGRADCAM is None:\n",
+    "        raise ValueError('UGradCAM results are not available. Please set PLOT_UGRADCAM to True.')\n",
+    "\n",
+    "    results_path = os.path.join(os.getcwd(), 'UGradCAM', final_results_df[\"Standardized SMILES\"].iloc[0])\n",
+    "\n",
+    "    if os.path.exists(os.path.join(results_path, '0', receptor+'.png')):\n",
+    "        print('Selected SMILES is predicted to NOT interact with the receptor', receptor)\n",
+    "        class_flag = 0\n",
+    "\n",
+    "    elif os.path.exists(os.path.join(results_path, '1', receptor+'.png')):\n",
+    "        print('Selected SMILES is predicted to interact with the receptor', receptor)\n",
+    "        class_flag = 1\n",
+    "    else:\n",
+    "        class_flag = None\n",
+    "\n",
+    "    if class_flag is not None:\n",
+    "        display(Image(filename=os.path.join(results_path, str(class_flag), receptor + '.png')))\n",
+    "    else:\n",
+    "        # quit code and return error\n",
+    "        raise ValueError('RECEPTOR NOT PREDICTED: select another available receptor!')\n",
+    "    \n",
+    "def run_plot(receptor):\n",
+    "    hTAS2R = [1, 3, 4, 5, 7, 8, 9, 10, 13, 14, 16, 38, 39, 40, 41, 42, 43, 44, 46, 47, 49, 50]\n",
+    "    receptors = ['TAS2R'+str(i) for i in hTAS2R]\n",
+    "    try: \n",
+    "        plot_UGradCAM(receptor)\n",
+    "    except Exception as e:\n",
+    "        print('Error:', e)\n",
+    "        print('\\nAvailable receptors:') \n",
+    "        for rec in receptors:\n",
+    "            print( '- '  + rec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Receptors that the model is trained to evaluate over\n",
+    "hTAS2R = [1, 3, 4, 5, 7, 8, 9, 10, 13, 14, 16, 38, 39, 40, 41, 42, 43, 44, 46, 47, 49, 50]\n",
+    "receptors = ['TAS2R'+str(i) for i in hTAS2R]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "03ddfde22f8e4bcc8898300377d42297",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='receptor', options=('TAS2R1', 'TAS2R3', 'TAS2R4', 'TAS2R5', 'TAS2R…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.run_plot(receptor)>"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "interact(run_plot, receptor=receptors)"
    ]
   }
  ],
