--- a/notebooks/GCN_Eval.ipynb
+++ b/notebooks/GCN_Eval.ipynb
@@ -53,23 +53,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "env: PYENCHANT_LIBRARY_PATH=/opt/homebrew/opt/enchant/lib/libenchant-2.dylib\n"
+      "[11:25:55] Initializing Normalizer\n"
      ]
     }
    ],
    "source": [
-    "# if you are encountering an error with enchant, uncomment the following line\n",
-    "# customise the path to your enchant library (/opt/homebrew/opt/enchant/lib/libenchant-2.dylib)\n",
-    "# to find the location of the enchant library on MacOS, run `brew --prefix enchant`\n",
-    "%env PYENCHANT_LIBRARY_PATH=/opt/homebrew/opt/enchant/lib/libenchant-2.dylib\n",
-    "\n",
     "import os, shutil\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -89,7 +84,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: PYENCHANT_LIBRARY_PATH=/opt/homebrew/opt/enchant/lib/libenchant-2.dylib\n"
+     ]
+    }
+   ],
+   "source": [
+    "# MacOS users:\n",
+    "# if you are encountering an error with enchant, uncomment the following line\n",
+    "# customise the path to your enchant library (/opt/homebrew/opt/enchant/lib/libenchant-2.dylib)\n",
+    "# to find the location of the enchant library on MacOS, run `brew --prefix enchant`\n",
+    "#%env PYENCHANT_LIBRARY_PATH=/opt/homebrew/opt/enchant/lib/libenchant-2.dylib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +115,7 @@
     "sys.path.append(os.path.join(os.path.dirname(os.getcwd()), 'GCN/'))\n",
     "\n",
     "import GCN_Eval\n",
-    "from GCN_Eval import eval_smiles_gcn"
+    "from GCN_Eval import eval_gcn"
    ]
   },
   {
@@ -111,10 +127,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# the code takes as input several file format, such as SMILES, FASTA, Inchi, PDB, Sequence, Smarts, pubchem name\n",
+    "# if you provide the pubchem name, the code will automatically query the pubchem database to get the SMILES and run the code\n",
     "smiles = 'CC(CC1=CC2=C(C=C1)OCO2)NC'"
    ]
   },
@@ -122,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Set TRUE to plot and save a UGrad-CAM plot for every pair. \n",
+    "Set TRUE to plot and save a **UGrad-CAM** plot for every pair. \n",
     "\n",
     "Plot the gradient activation with UGrad-CAM, where Red is associated with activation of the node toward class 1, and Blue toward class 0"
    ]
@@ -138,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,33 +168,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Should the model check if any of the input molecules is already present in the dataset?\n",
-    "<br>\n",
-    "If True, for any known pair the results will show the ground truth (0 or 1) and not model's prediction."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# If TRUE checks if evaluated pairs have in-vitro verified data and overwrites prediction with Ground Truth\n",
-    "GT = True"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Run the evaluation task over the input molecule for every non-orphan receptors with the trained model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO  ] Input has been interpeted as SMILES\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -216,7 +222,7 @@
     }
    ],
    "source": [
-    "final_results_df = eval_smiles_gcn(smiles, ground_truth=GT, verbose=True, plot_ugradcam=PLOT_UGRADCAM, outdir=os.getcwd())"
+    "final_results_df = eval_gcn(smiles, verbose=True, plot_ugradcam=PLOT_UGRADCAM, outdir=os.getcwd())"
    ]
   },
   {
@@ -242,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +273,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Standardized SMILES</th>\n",
-       "      <th>Ground Truth</th>\n",
        "      <th>Check AD</th>\n",
        "      <th>1</th>\n",
        "      <th>3</th>\n",
@@ -297,7 +302,6 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>CNC(C)Cc1ccc2c(c1)OCO2</td>\n",
-       "      <td>Unknown</td>\n",
        "      <td>True</td>\n",
        "      <td>0.47</td>\n",
        "      <td>0.01</td>\n",
@@ -327,14 +331,14 @@
        "</div>"
       ],
       "text/plain": [
-       "      Standardized SMILES Ground Truth  Check AD     1     3     4     5  \\\n",
-       "0  CNC(C)Cc1ccc2c(c1)OCO2      Unknown      True  0.47  0.01  0.62  0.02   \n",
+       "      Standardized SMILES  Check AD     1     3     4     5     7     8     9  \\\n",
+       "0  CNC(C)Cc1ccc2c(c1)OCO2      True  0.47  0.01  0.62  0.02  0.09  0.16  0.18   \n",
        "\n",
-       "      7     8     9   10    13   14    16    38    39    40   41   42    43  \\\n",
-       "0  0.09  0.16  0.18  0.7  0.05  0.6  0.06  0.55  0.29  0.14  0.0  0.0  0.37   \n",
+       "    10    13   14    16    38    39    40   41   42    43    44   46   47  \\\n",
+       "0  0.7  0.05  0.6  0.06  0.55  0.29  0.14  0.0  0.0  0.37  0.16  0.7  0.1   \n",
        "\n",
-       "     44   46   47    49    50  \n",
-       "0  0.16  0.7  0.1  0.22  0.06  "
+       "     49    50  \n",
+       "0  0.22  0.06  "
       ]
      },
      "metadata": {},
@@ -355,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,13 +415,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d289b5b5b244035884ed7a465f5c9c8",
+       "model_id": "a7c911678993408b940fbf3503e65231",
        "version_major": 2,
        "version_minor": 0
       },
@@ -434,7 +438,7 @@
        "<function __main__.run_plot(receptor)>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
