--- a/notebooks/TML_Eval.ipynb
+++ b/notebooks/TML_Eval.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The model takes SMILES of any query molecules as input and returns the predicted probability of binding to each non-orphan TAS2R receptor."
+    "The model takes the query molecule(s) as input and returns the predicted probability of binding to each non-orphan TAS2R receptor."
    ]
   },
   {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -78,32 +78,25 @@
     }
    ],
    "source": [
+    "# MacOS users:\n",
     "# if you are encountering an error with enchant, uncomment the following line\n",
     "# customise the path to your enchant library (/opt/homebrew/opt/enchant/lib/libenchant-2.dylib)\n",
     "# to find the location of the enchant library on MacOS, run `brew --prefix enchant`\n",
-    "%env PYENCHANT_LIBRARY_PATH=/opt/homebrew/opt/enchant/lib/libenchant-2.dylib"
+    "#%env PYENCHANT_LIBRARY_PATH=/opt/homebrew/opt/enchant/lib/libenchant-2.dylib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[19:33:30] Initializing Normalizer\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import the evaluation function for the TML model (folder in ../TML)\n",
     "import os\n",
     "sys.path.append(os.path.join(os.path.dirname(os.getcwd()), 'TML/'))\n",
     "\n",
     "import TML_Eval\n",
-    "from TML_Eval import eval_smiles"
+    "from TML_Eval import eval_tml"
    ]
   },
   {
@@ -115,29 +108,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# the code takes as input several file format, such as SMILES, FASTA, Inchi, PDB, Sequence, Smarts, pubchem name\n",
+    "# if you provide the pubchem name, the code will automatically query the pubchem database to get the SMILES and run the code\n",
     "smiles = 'CC(CC1=CC2=C(C=C1)OCO2)NC'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Should the model check if any of the input molecules is already present in the dataset?\n",
-    "<br>\n",
-    "If True, for any known pair the results will show the ground truth (0 or 1) and not model's prediction."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "GT = True # TRUE for Ground Truth Check"
    ]
   },
   {
@@ -149,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -157,6 +134,7 @@
      "output_type": "stream",
      "text": [
       "[INFO  ] Standardizing molecules\n",
+      "[INFO  ] Input has been interpeted as SMILES\n",
       "[INFO  ] Checking Applicability Domain\n",
       "[INFO  ] Calculating descriptors\n",
       "[INFO  ] Adding Receptor features\n",
@@ -166,7 +144,7 @@
     }
    ],
    "source": [
-    "f_df = eval_smiles(smiles,ground_truth=GT, verbose=True)"
+    "f_df = eval_tml(smiles, verbose=True)"
    ]
   },
   {
@@ -199,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +202,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Standardized SMILES</th>\n",
-       "      <th>Ground Truth</th>\n",
        "      <th>Check AD</th>\n",
        "      <th>1</th>\n",
        "      <th>3</th>\n",
@@ -254,8 +231,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>CNC(C)Cc1ccc2c(c1)OCO2</td>\n",
-       "      <td>Absent</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>True</td>\n",
        "      <td>0.09</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.05</td>\n",
@@ -284,14 +260,14 @@
        "</div>"
       ],
       "text/plain": [
-       "      Standardized SMILES Ground Truth Check AD     1    3     4    5     7  \\\n",
-       "0  CNC(C)Cc1ccc2c(c1)OCO2       Absent      1.0  0.09  0.0  0.05  0.0  0.01   \n",
+       "      Standardized SMILES  Check AD     1    3     4    5     7    8    9  \\\n",
+       "0  CNC(C)Cc1ccc2c(c1)OCO2      True  0.09  0.0  0.05  0.0  0.01  0.0  0.0   \n",
        "\n",
-       "     8    9    10   13    14    16    38    39    40   41   42    43   44  \\\n",
-       "0  0.0  0.0  0.61  0.0  0.84  0.01  0.07  0.07  0.01  0.0  0.0  0.02  0.0   \n",
+       "     10   13    14    16    38    39    40   41   42    43   44   46    47  \\\n",
+       "0  0.61  0.0  0.84  0.01  0.07  0.07  0.01  0.0  0.0  0.02  0.0  0.5  0.01   \n",
        "\n",
-       "    46    47    49   50  \n",
-       "0  0.5  0.01  0.01  0.0  "
+       "     49   50  \n",
+       "0  0.01  0.0  "
       ]
      },
      "metadata": {},
